src/css/componentsStyles.css
/* Styles pour ETML et CFPV */

:root
{
    /*Taille   */
    --MinSizeWidth : 260px;
    --MaxSizeWidth : 340px;
}

.site_etml,
.site_cfpv {
  
  /* DateRoom */
  --dateRoom-textColor: #ffffff;
  --dateRoom-bgColor: #252525;
  /* Noir */

  --breakLine-TextColor: #333;
  --breakLine-bgColor: #f4fea7;

  --deleteButton-textColor: #252525;
  /* Noir */
  --deleteButton-bgColor: var(--site-buttonColor, #66bb6a);
  /* Vert par défaut */

  /* TPI Styles */
  --tpi-timeSlot-textColor: #252525;
  /* Noir */
  --tpi-timeSlot-bgColor: #ffffff;
  /* Blanc */

  --tpi-card-textColor: var(--site-textColor, #ffffff);
  /* Noir par défaut */
  --tpi-card-candidat-bgColor: var(--site-candidatColor, #696969);
  /* Gris clair par défaut */
  --tpi-card-experts-bgColor: var(--site-expertsColor, #2196f3);
  /* Bleu par défaut */
  --tpi-card-boss-bgColor: var(--site-bossColor, #283840);
  /* Bleu foncé par défaut */
}

/* Styles pour CFPV */
.site_cfpv {
  --deleteButton-bgColor: var(--site-buttonColor, #ff5252);
  /* Rouge par défaut */
  --tpi-card-textColor: var(--site-textColor, #252525);
  /* Noir par défaut */
  --tpi-card-candidat-bgColor: var(--site-candidatColor, #fce4ec);
  /* Rose par défaut */
  --tpi-card-experts-bgColor: var(--site-expertsColor, #ff4081);
  /* Rose foncé par défaut */
  --tpi-card-boss-bgColor: var(--site-bossColor, #d50000);
  /* Rouge foncé par défaut */
}

/* Ajoutez d'autres sections pour d'autres sites si nécessaire */

/* Styles généraux pour la date room */

.room {
  line-height: 1em;
  margin-left: 15px;
  min-width: var(--MinSizeWidth);
  max-width: var(--MaxSizeWidth); 
}

@media screen and (min-width: 454px) {
  .room {
    padding-top: calc(100vh - 43.5em);
  }
}

@media screen and (max-width: 453px) {
  .room {
    padding-top: calc(100vh - 44.5em);
  }
}

@media screen and (max-width: 395px) {
  .room {
    padding-top: calc(100vh - 39.5em);
  }
}

@media screen and (max-width: 383px) {
  .room {
    padding-top: calc(100vh - 34em);
  }
}

@media screen and (max-width: 379px) {
  .room {
    padding-top: calc(100vh - 37.5em);
  }
}

.date-room {
  text-align: center;
  background-color: var(--dateRoom-bgColor);
  color: var(--dateRoom-textColor);
  border: 5px solid var(--dateRoom-bgColor);
}

.date {
  font-size: large;
  font-weight: bold;
  line-height: 2em;
  color: var(--dateRoom-textColor);
}

.nameRoom {
  font-size: large;
  line-height: 2em;
  color: var(--dateRoom-textColor);
}

/* Styles pour la ligne de séparation */
.breakLine {
  color: var(--breakLine-TextColor);
  border-block: 2px solid var(--breakLine-TextColor);
  background-color: var(--breakLine-bgColor);
  height: 20px;
}

.breakLine p {
  margin: 1%;
}

/* Styles pour le bouton de suppression */
.delete-button {
  color: var(--deleteButton-textColor);
  background-color: var(--deleteButton-bgColor);
}

/* Styles généraux pour le TPISlot */
.tpiSlot {

  color: var(--tpi-timeSlot-textColor);
  background-color: var(--tpi-timeSlot-bgColor);
  display: grid;
  grid-template-columns: 25% auto;
  margin: 0 auto;
  padding: 1px;
}

.timeSlot {
  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
  font-size: large;
  text-align: left;
  display: grid;
  grid-template-rows: 50% auto;
  gap: 10px;
  border-right: 1px solid var(--tpi-timeSlot-textColor);
  margin-left: 8px;
}

.top {
  align-self: flex-start;
  margin-top: 5px;
}

.bottom {
  align-self: flex-end;
  margin-bottom: 5px;
}

/* Styles généraux pour le TPICard */
.tpiCard {
  color: var(--tpi-card-textColor);
  text-align: left;
  min-width: 100px;
  max-width: 260px;
  grid-template-rows: 25% 25% 25% auto;
}

/* Styles pour le fond du candidat */
.tpiCard .candidat {
  text-align: center;
  font-weight: bolder;
  background-color: var(--tpi-card-candidat-bgColor);
  border-bottom: 2px solid var(--tpi-card-textColor);
  padding: 5px;
}

/* Styles pour le fond des experts */
.tpiCard .expert {
  background-color: var(--tpi-card-experts-bgColor);
  padding: 5px;
}

/* Styles pour le fond du chef de projet */
.tpiCard .boss {
  background-color: var(--tpi-card-boss-bgColor);
  border-top: 2px solid var(--tpi-card-textColor);
  padding: 5px;
}

/************************
*****Button delete   ****
*************************/

.buttonDelete {
  background-color: white;
  padding-top: 6px;
  padding-bottom: 3px;
  text-align: right;
}

.buttonDelete button {
  border-radius: 2px;
  padding: 5px;
  color: #ffffff;
  background-color: #ff4081;
  font-size: medium;
  font-weight: bold;
  border: none;
  transition: background-color 0.3s ease-in-out;
}

.buttonDelete button:hover {
  background-color: #ff0000;
  color: #ffffff;
  cursor: pointer;
  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
}

.buttonDelete:hover::after {
  content: "Attention: Tout sera supprimé !";
  position: absolute;
  text-align: center;
  bottom: 31px;
  left: 50%;
  width: 200px;
  background-color: #ff0000;
  color: #ffffff;
  padding: 2px;
  font-size: 16px;
  font-weight: bold;
  transition: opacity 1s ease-in-out;
  opacity: 1;
}

.buttonDelete:not(:hover)::after {
  opacity: 0;
}

/*******************************
** design pour le mode edition *
********************************/

.edit {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-left: auto;
  margin-right: auto;
  background-color: #f8f8f8;
  width: 80%;
  border: 1px solid #ccc;
  border-radius: 6px;
  padding: 8px;
  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
}

.edit:focus {
  background-color: #fff;
  border-color: #2196f3;
  box-shadow: 0 0 0 2px rgba(33, 150, 243, 0.3);
  outline: none;
  transform: scale(1.1);
}

